[package]
name = "opal"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atoi = "1"
bincode = "1"
bytes = { version = "1", features = ["serde"] }
clap = { version = "3.1.8", features = ["derive"] }
crossbeam = "0.8"
dashmap = "5"
memmap2 = "0.5"
num_cpus = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.7", features = ["criterion", "flamegraph"] }
proptest = "1"
rand = "0.8"
rayon = "1"
tempfile = "3"

[[bench]]
name = "compare_engines"
harness = false

[[bench]]
name = "bitcask"
harness = false
