[package]
name = "bitcask"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
bench = false

[[bin]]
name = "svr"
bench = false

[lib]
bench = false

[dependencies]
anyhow = "1"
bincode = "1"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = "0.13"
crossbeam = "0.8"
lru = "0.12"
memmap2 = "0.9"
num_cpus = "1"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
crossbeam-skiplist = "0.1.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
proptest = "1"
rayon = "1"
sled = "0.34"
tempfile = "3"

[[bench]]
name = "connection"
harness = false

[[bench]]
name = "readwrite"
harness = false
